--- a/assets/css/acordeon.css
+++ b/assets/css/acordeon.css
@@ -40,7 +40,7 @@
     height: 1.5rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url('/assets/svg/arrow.svg');
+    background-image: url('assets/svg/arrow.svg');
     transform: rotate(180deg);
     transition: .50s;
 }
