--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url('/https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 @font-face{
     font-family:'Neue Machina';
-    src: url('assets/fonts/NeueMachina-Regular.otf');
+    src: url('/assets/fonts/NeueMachina-Regular.otf');
 }
 * {
     box-sizing: border-box;
@@ -21,7 +21,7 @@ body{
 
 body::after {
     content: '';
-    background-image: url('assets/img/mesh-846\ 2.png');
+    background-image: url('/assets/img/mesh-846\ 2.png');
     background-repeat: no-repeat;
     background-size: contain;
     display: inline-block;
@@ -35,7 +35,7 @@ body::after {
 }
 body::before {
     content: '';
-    background-image: url('assets/img/mesh-846\ 2.png');
+    background-image: url('/assets/img/mesh-846\ 2.png');
     background-repeat: no-repeat;
     background-size: contain;
     display: inline-block;
