--- a/assets/css/languages.css
+++ b/assets/css/languages.css
@@ -24,7 +24,7 @@
     height: 1rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url('assets/svg/checked.svg');
+    background-image: url('/assets/svg/checked.svg');
     margin-right: .5rem;
 
 }
