--- a/assets/css/experience.css
+++ b/assets/css/experience.css
@@ -18,7 +18,7 @@
     height: 1rem;
     background-repeat: no-repeat;
     background-size: contain;
-    background-image: url('/assets/svg/period.svg');
+    background-image: url('../svg/period.svg');
     margin-right: .5rem;
 
 }
